// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UXCaptureEventMark renders component markup 1`] = `
<img
  onLoad="if(window.UX) { UX.mark('ux-image-load-logo'); }"
  src="/foo"
/>
`;

exports[`UXCaptureEventMark returns the child element untouched if it has an onLoad prop 1`] = `
<img
  onLoad="alert('hi');"
  src="/foo"
/>
`;
